# LLM-EVAL-FRAMEWORK

./: .gitignore  .gitignore copy  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README copy.md  README.md  commit_all.sh  comparator.py  crewai_evaluator.py  crewai_tools.py  dashboard.py  llm_judge.py  ollama_evaluator.py  pyproject.toml  rankings.py  requirements.txt  runner.py  runners.py  sample_prompts.json  scorer.py  sqlite_store.py  tools.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: agents.yaml  tasks.yaml
pages/: 1_Launch.py  1_Launch_Evaluators.py  1_🚀_Launch_Evaluators.py  2_Results.py  2_🔍_Results.py  3_Overview.py  3_🏠_Overview.py  4_Pipeline.py  4_Professional_Pipeline.py  4_Run_Eval.py  4_🚀_Run_Eval.py  5_Leaderboard.py  5_Pairwise.py  5_🏆_Leaderboard.py  6_Metrics.py  6_Responses.py  6_🔍_Responses.py  7_Pairwise.py  7_⚔️_Pairwise.py  8_Metrics.py  8_📊_Metrics.py
tests/: conftest.py  test_integration.py  test_tools.py
